@@ -1,4 +1,0 @@
-for lang in $JMdict_lang; do
-  export DICT_LANG=$lang
-  buildall
-done
