@@ -1,5 +1,0 @@
-for lang in $kanjidic_lang; do
-  export DICT_LANG=$lang
-
-  buildall
-done
